...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Loginview">

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:hint="Email"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        android:textSize="24sp"
...
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail"
        app:layout_constraintVertical_bias="0.155" />

    <ImageButton
        android:id="@+id/emailSignInButton"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginBottom="88dp"
        android:adjustViewBounds="false"
        android:background="#0000"
        android:cropToPadding="false"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/signinbutton" />

    <ImageButton
        android:id="@+id/emailCreateAccountButton"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginBottom="88dp"
        android:adjustViewBounds="false"
        android:background="#0000"
        android:cropToPadding="false"
...
