...
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/friendsbg" />

    <ImageButton
        android:id="@+id/gotomain"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/addfriendstitle"
        android:layout_alignStart="@+id/emailsearch"
        android:background="#0000"
        android:onClick="gobacktomain"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@drawable/backtomainmenu" />


    <ListView
        android:id="@+id/listviewaddfriends"
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/addfriends"
        android:layout_width="106dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="75dp"
...
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/searchusers"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/emailsearch"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="96dp"
        android:background="@drawable/searchbutton"
...
